--- a/MFCApplication5/MFCApplication5.vcxproj
+++ b/MFCApplication5/MFCApplication5.vcxproj
@@ -208,6 +208,7 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\americano.bmp" />
+    <Image Include="res\buger.bmp" />
     <Image Include="res\cheeseball.bmp" />
     <Image Include="res\cheesestick.bmp" />
     <Image Include="res\chesse.bmp" />
@@ -218,16 +219,21 @@
     <Image Include="res\COKE.bmp" />
     <Image Include="res\coleslaw.bmp" />
     <Image Include="res\corn_salad.bmp" />
+    <Image Include="res\dessert.bmp" />
     <Image Include="res\double.bmp" />
+    <Image Include="res\drink.bmp" />
     <Image Include="res\FORK.bmp" />
     <Image Include="res\french_fries.bmp" />
+    <Image Include="res\inshop.bmp" />
     <Image Include="res\MFCApplication5.ico" />
     <Image Include="res\MILKSHAKE.bmp" />
     <Image Include="res\nugget.bmp" />
     <Image Include="res\ORANGE.bmp" />
     <Image Include="res\shrimpbmp.bmp" />
+    <Image Include="res\side.bmp" />
     <Image Include="res\softcon.bmp" />
     <Image Include="res\squid.bmp" />
+    <Image Include="res\takeout.bmp" />
     <Image Include="res\tansan.bmp" />
     <Image Include="res\waffle.bmp" />
     <Image Include="res\ZEROCIDER.bmp" />
