--- a/MFCApplication5/MFCApplication5.vcxproj
+++ b/MFCApplication5/MFCApplication5.vcxproj
@@ -226,6 +226,7 @@
     <Image Include="..\..\..\..\Desktop\squid_burger.bmp" />
     <Image Include="res\americano.bmp" />
     <Image Include="res\back.bmp" />
+    <Image Include="res\bitmap1.bmp" />
     <Image Include="res\buger.bmp" />
     <Image Include="res\bul_burger.bmp" />
     <Image Include="res\Card.bmp" />
