--- a/MFCApplication5/MFCApplication5.vcxproj.filters
+++ b/MFCApplication5/MFCApplication5.vcxproj.filters
@@ -236,5 +236,8 @@
     <Image Include="..\..\..\..\Desktop\squid_burger.bmp">
       <Filter>리소스 파일</Filter>
     </Image>
+    <Image Include="res\bitmap1.bmp">
+      <Filter>리소스 파일</Filter>
+    </Image>
   </ItemGroup>
 </Project>
