--- a/MFCApplication5/MFCApplication5.vcxproj.filters
+++ b/MFCApplication5/MFCApplication5.vcxproj.filters
@@ -36,6 +36,21 @@
     <ClInclude Include="NewDialog.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="ShrimpDialog.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="ChickenDialog.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="CheeseDialog.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="DoubleDialog.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="SquidDialog.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MFCApplication5.cpp">
@@ -48,6 +63,21 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="NewDialog.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="ShrimpDialog.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="ChickenDialog.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="CheeseDialog.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="DoubleDialog.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="SquidDialog.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
@@ -189,6 +219,24 @@
       <Filter>리소스 파일</Filter>
     </Image>
     <Image Include="res\solo.bmp">
+      <Filter>리소스 파일</Filter>
+    </Image>
+    <Image Include="res\Shrimp_Burger.bmp">
+      <Filter>리소스 파일</Filter>
+    </Image>
+    <Image Include="res\cheese_burger.bmp">
+      <Filter>리소스 파일</Filter>
+    </Image>
+    <Image Include="res\bitmap2.bmp">
+      <Filter>리소스 파일</Filter>
+    </Image>
+    <Image Include="res\chicken_burger.bmp">
+      <Filter>리소스 파일</Filter>
+    </Image>
+    <Image Include="res\squid_burger.bmp">
+      <Filter>리소스 파일</Filter>
+    </Image>
+    <Image Include="res\double_burger.bmp">
       <Filter>리소스 파일</Filter>
     </Image>
   </ItemGroup>
