--- a/MFCApplication5/MFCApplication5.vcxproj.filters
+++ b/MFCApplication5/MFCApplication5.vcxproj.filters
@@ -239,5 +239,8 @@
     <Image Include="res\double_burger.bmp">
       <Filter>리소스 파일</Filter>
     </Image>
+    <Image Include="res\beaf.bmp">
+      <Filter>리소스 파일</Filter>
+    </Image>
   </ItemGroup>
 </Project>
